--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+  @import url('https://fonts.googleapis.com/css2?family=Gaegu&family=Hi+Melody&family=Orbit&family=ZCOOL+KuaiLe&display=swap');
+</style>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/mooncloud.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>다</title>
+    <title>DaE</title>
   </head>
   <body>
     <div id="root"></div>
